Register.tsx almost done

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@tailwind utilities;
 
 @custom-variant dark (&:is(.dark *));
 
@@ -117,4 +118,12 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+body{
+  width: 100%;
+  min-height: 100vh;
+}
+#root{
+  width: 100%;
+  min-height: 100vh;
 }
