--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;padding: 0;box-sizing: border-box;
+}
+
+@tailwind utilities;
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -117,4 +123,13 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+body{
+  width: 100%;
+  min-height: 100vh;
+}
+#root{
+  width: 100%;
+  min-height: 100vh;
 }
